--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>color-to-binary</title>
+    <title>What Color looks like as Binary</title>
   </head>
   <body>
     <div id="app"></div>
